update GA tracking id

--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ description: Comparatives of county spending on "biscuits" (i.e. frivolous items
 url: https://biscuitindex.codeforkenya.org
 enforce_ssl: biscuitindex.codeforkenya.org
 
-google_analytics: UA-33350783-7
+google_analytics: G-PY4S0WY01M
